# BenchCli

./: .gitignore  README.md  pyproject.toml  setup.py
benchcli/: __init__.py  __main__.py  cli.py  config.py  docker_manager.py  ui.py
